alteração no campo pai e colocação de opçoes de escolaridade

--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
             <input type="number" placeholder="00.000.00-0" required />
           </li>
           <li>
-            <p>Pai:</p>
-            <input type="text" placeholder="Nome do Pai" required />
+            <p>Mãe:</p>
+            <input type="text" placeholder="Nome da Mãe" required />
           </li>
           <li>
             <p>Escolaridade:</p>
             <select>
               <option value="">Selecione</option>
+              <option value="">Ensino Fundamental Completo</option>
+              <option value="">Ensino Fundamental Incompleto</option>
+              <option value="">Ensino Médio Completo</option>
+              <option value="">Ensino Médio Incompleto</option>
+             
             </select>
           </li>
           <li>
@@ -50,8 +55,8 @@
             <input type="number" placeholder="000.000.000-00" required />
           </li>
           <li>
-            <p>Mãe:</p>
-            <input type="text" placeholder="Nome da Mãe" required />
+            <p>Pai:</p>
+            <input type="text" placeholder="Nome do Pai" />
           </li>
           <li>
             <p>Profissão:</p>
