--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </li>
           <li>
             <p>Escolaridade:</p>
-            <select>
+            <select required>
               <option value="">Selecione</option>
-              <option value="">Ensino Fundamental Completo</option>
+              <option value="">Ensino Fundamental Completo </option>
               <option value="">Ensino Fundamental Incompleto</option>
               <option value="">Ensino Médio Completo</option>
               <option value="">Ensino Médio Incompleto</option>
